fix: reduce font size on mobile

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -24,7 +24,7 @@
         --fs-xxxl: 15vw;
         --fs-xxl: 4.2rem;
         --fs-xl: 2.8rem;
-        --fs-l: 2rem;
+        --fs-l: 1.6rem;
         --fs-x: 1.1rem;
         --fs-s: .75rem;
     }
@@ -34,7 +34,7 @@
         --fs-xxxl: 12vw;
         --fs-xxl: 4.2rem;
         --fs-xl: 2.2rem;
-        --fs-l: 1.6rem;
+        --fs-l: 1.4rem;
         --fs-x: 1rem;
         --fs-s: .8rem;
     }
